--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "TuTienda-Riera",
+  "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/source-map": "^0.5.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.1",
-    "mime": "^1.6.0",
-    "postcss-safe-parser": "^5.0.2",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
-    "react-alert": "^7.0.3",
-    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
-    "sweetalert": "^2.1.2",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
